# TaskNinja

./: .gitignore  CMakeLists.txt  README.md
include/: Config.h  ConsoleUtils.h  FileSystemUtils.h  Open.h  RenderUtils.h  Task.h  TaskNinja.h  WR.h
src/: Config.cpp  ConsoleUtils.cpp  FileSystemUtils.cpp  Open.cpp  RenderUtils.cpp  TaskNinja.cpp  TaskNinja.h  WR.cpp  main.cpp
